# security-doc

./: .gitignore  .gitreview  .zuul.yaml  README.rst  bindep.txt  doc-test.conf  doc-tools-check-languages.conf  other-requirements.txt  test-requirements.txt  tox.ini
security-guide/: README.rst  acknowledgements.xml  bk-openstack-sec-guide.xml  bk-openstack-security-guide.xml  case-studies-system-documentation.xml  ch001_acknowledgements.xml  ch002_why-and-how-we-wrote-this-book.xml  ch004_book-introduction.xml  ch005_security-domains.xml  ch006_introduction-to-case-studies.xml  ch008_system-roles-types.xml  ch009_case-studies.xml  ch011_management-introduction.xml  ch012_configuration-management.xml  ch013_node-bootstrapping.xml  ch014_best-practices-for-operator-mode-access.xml  ch015_case-studies-management.xml  ch017_threat-models-confidence-and-confidentiality.xml  ch018_case-studies-pkissl.xml  ch020_ssl-everywhere.xml  ch021_paste-and-middleware.xml  ch022_case-studies-api-endpoints.xml  ch024_authentication.xml  ch025_web-dashboard.xml  ch026_compute.xml  ch027_storage.xml  ch028_case-studies-identity-management.xml  ch030_state-of-networking.xml  ch031_neutron-architecture.xml  ch032_networking-best-practices.xml  ch033_securing-neutron-services.xml  ch034_tenant-secure-networking-best-practices.xml  ch035_case-studies-networking.xml  ch037_risks.xml  ch038_transport-security.xml  ch039_case-studies-messaging.xml  ch041_database-backend-considerations.xml  ch042_database-overview.xml  ch043_database-transport-security.xml  ch044_case-studies-database.xml  (+177 more)
(+317 files in other folders)
